# ifrs_reporting

./: .gitignore  README.md  pyproject.toml
ifrs_reporting/: hooks.py  install.py  modules.txt  patches.txt
ifrs_reporting/data/: account_category_mapping.json
ifrs_reporting/doctype/account_category/: account_category.py
ifrs_reporting/doctype/financial_report_template/: financial_report_engine.py  financial_report_template.py  financial_report_validation.py
ifrs_reporting/fixtures/: custom_field.json
ifrs_reporting/ifrs_reporting/doctype/account_category/: account_category.json  account_category.py
ifrs_reporting/ifrs_reporting/doctype/financial_report_row/: financial_report_row.json
ifrs_reporting/ifrs_reporting/doctype/financial_report_template/: financial_report_engine.py  financial_report_template.js  financial_report_template.json  financial_report_template.py
ifrs_reporting/ifrs_reporting/financial_report_template/financial_ratios_analysis/: financial_ratios_analysis.json
ifrs_reporting/ifrs_reporting/financial_report_template/horizontal_balance_sheet_(columnar)/: horizontal_balance_sheet_(columnar).json
ifrs_reporting/ifrs_reporting/financial_report_template/horizontal_profit_and_loss_(columnar)/: horizontal_profit_and_loss_(columnar).json
ifrs_reporting/ifrs_reporting/financial_report_template/standard_balance_sheet_(ifrs)/: standard_balance_sheet_(ifrs).json
ifrs_reporting/ifrs_reporting/report/balance_sheet/: balance_sheet.js  balance_sheet.py
ifrs_reporting/patches/v1_0/: map_existing_account_categories.py
(+9 files in other folders)
