[project]
name = "ifrs_reporting"
authors = [
    { name = "Nipuna Rangika", email = "nipuna@synaxlabs.com" }
]
description = "IFRS financial reporting backport for ERPNext v15"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
